test_report.txt

> neovim-theme-generator@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/neovim-theme-generator/neovim-theme-generator/node_modules/react-dnd/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from './core/index.js';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

      1 | import React from "react";
      2 | import { Box, Card, CardBody, Text } from "@chakra-ui/react";
    > 3 | import { useDrop } from "react-dnd";
        | ^
      4 | import { DroppedPreset, ThemeFile } from "./Common";
      5 |
      6 | interface PresetLoaderProps {

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/components/PresetLoader.tsx:3:1)
      at Object.<anonymous> (src/components/Preview.tsx:7:1)
      at Object.<anonymous> (src/pages/edit.tsx:7:1)
      at Object.<anonymous> (src/App.tsx:2:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

---------------------|---------|----------|---------|---------|-------------------
File                 | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
---------------------|---------|----------|---------|---------|-------------------
All files            |       0 |        0 |       0 |       0 |                   
 src                 |       0 |        0 |       0 |       0 |                   
  App.tsx            |       0 |      100 |       0 |       0 | 9                 
  chakraTheme.ts     |       0 |      100 |     100 |       0 | 1                 
  index.tsx          |       0 |      100 |     100 |       0 | 11-33             
  reportWebVitals.ts |       0 |        0 |       0 |       0 | 3-10              
 src/components      |       0 |        0 |       0 |       0 |                   
  ColorBucket.tsx    |       0 |      100 |       0 |       0 | 13-41             
  ColorPicker.tsx    |       0 |      100 |       0 |       0 | 7-17              
  Common.ts          |       0 |        0 |       0 |       0 |                   
  DevPresetList.ts   |       0 |      100 |     100 |       0 | 4                 
  DragColor.tsx      |       0 |      100 |       0 |       0 | 7-14              
  DragPreset.tsx     |       0 |      100 |       0 |       0 | 17-24             
  EditPresets.tsx    |       0 |      100 |       0 |       0 | 7                 
  Editor.tsx         |       0 |      100 |       0 |       0 | 9-55              
  PresetLoader.tsx   |       0 |      100 |       0 |       0 | 10-17             
  Presets.tsx        |       0 |      100 |       0 |       0 | 12-29             
  Preview.tsx        |       0 |        0 |       0 |       0 | 9-138             
 src/functions       |       0 |        0 |       0 |       0 |                   
  download.ts        |       0 |        0 |       0 |       0 | 5-53              
 src/pages           |       0 |      100 |       0 |       0 |                   
  edit.tsx           |       0 |      100 |       0 |       0 | 13-26             
  landing.tsx        |       0 |      100 |       0 |       0 | 12-26             
  users.tsx          |       0 |      100 |       0 |       0 | 5                 
---------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.889 s
Ran all test suites.
